Fix bug: overflow and scroll issues of items and footer of shopping cart section

--- a/task2_8/styles/style.scss
+++ b/task2_8/styles/style.scss
@@ -261,6 +261,12 @@ body {
   text-align: center;
 }
 
+.shop-cart__items-wrapper {
+  height: 60vh;
+  overflow-y: auto;
+  margin-bottom: 2rem;
+}
+
 .shop-cart__item {
   display: flex;
   align-items: center;
@@ -320,7 +326,7 @@ body {
 
 .shop-cart__footer {
   position: absolute;
-  bottom: 5%;
+  bottom: 10%;
   left: 35%;
 }
 
